First cut at custom pages for 1.8.

--- a/custom.css
+++ b/custom.css
@@ -173,7 +173,7 @@ body{ font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "B
 	margin-right: auto;
 	margin-top: 10px;
 	float: right;
-	text-align: center;
+	text-align: left;
 	padding: 5px;
 	border: solid 1px #DDDDDD;
 	background-color: #FFFFCC;
