Added custom header.

--- a/layout.css
+++ b/layout.css
@@ -18,21 +18,23 @@ the terms_of_service.txt file included in this package.
 ------------------------------------------------------------------------------*/
 
 /*---:[ core layout elements ]:---*/
-#container { width: 97.4em; margin: 0 auto; }
-	#page { padding: 0em; }
+.full_width { width: 100%; clear: both; }
+	.full_width .page { width: 97.4em; margin: 0 auto; padding-right: 0em; padding-left: 0em; }
+	#header_area .page { padding-top: 0em; }
+	#footer_area .page { padding-bottom: 0em; }
 		#header, #footer { padding-right: 1.2em; padding-left: 1.2em; }
 		#content_box { width: 100%; }
 		.no_sidebars { background: none !important; }
 			
-			#content { width: 51.6em; float: left; }
+			#content { width: 51.6em; float: right; }
 			.no_sidebars #content { width: 100%; }
-				.post_box, .teasers_box, .full_width #content_box .page { margin: 0 2.4em 0 1.2em; }
+				.post_box, .teasers_box, .full_width #content_box .page { margin: 0 1.2em 0 2.4em; }
 					.full_width #content_box .page { width: auto; }
 				.no_sidebars .post_box { margin: 0 1.2em; }
 				.teasers_box { width: 48em; }
 					.teaser { width: 22.8em; }
-				#archive_intro, .prev_next { padding-right: 2.4em; padding-left: 1.2em; }
-			#sidebars { width: 45.8em; border: 0; float: right; }
+				#archive_intro, .prev_next { padding-right: 1.2em; padding-left: 2.4em; }
+			#sidebars { width: 45.8em; border: 0; float: left; }
 				#sidebar_1 { width: 17.4em; border-style: dotted; border-width: 0 0em 0 0; float: left; clear: left; }
 				#sidebar_2 { width: 28.3em; float: left; }
 					.sidebar ul.sidebar_list { padding-right: 1.2em; padding-left: 1.2em; }
@@ -61,7 +63,7 @@ the terms_of_service.txt file included in this package.
 	#image_box img.one_by_two { width: 43em; height: 86em; }
 
 /*---:[ comments area ]:---*/
-#comments { margin-right: 2.4em; margin-left: 0em; }
+#comments { margin-right: 1.2em; margin-left: 1.2em; }
 	.comments_intro, #respond_intro { margin-left: 1.2em; }
 		dl#comment_list dt, #trackback_list { padding-right: 1.2em; padding-left: 1.2em; }
 		dl#comment_list dd { padding-left: 1.2em; }
@@ -72,7 +74,7 @@ the terms_of_service.txt file included in this package.
 		dl#comment_list dl dd .format_text { padding-left: 1.5em; border-width: 0 0 0 0.063em; }
 		dl#comment_list dl dd.bypostauthor > .format_text { padding-left: 1.4em; border-width: 0 0 0 0.125em; }
 		dl#comment_list dl dd dl { padding-left: 2.4em; }
-#commentform { padding-right: 2.4em; padding-left: 1.2em; }
+#commentform { padding-right: 1.2em; padding-left: 1.2em; }
 .comments_closed, .login_alert { margin-left: 1.2em; }
 
 /*---:[ content elements ]:---*/
@@ -248,7 +250,6 @@ input, textarea { font-family: Georgia, "Times New Roman", Times, serif; }
 
 /*---:[ footer styles ]:---*/
 #footer p { font-size: 1.2em; line-height: 1.667em; }
-ul.sidebar_list { padding-top: 2.4em; }
 
 /*---:[ teaser styles ]:---*/
 .teaser h2 { font-size: 1.8em; line-height: 1.333em; }
@@ -275,7 +276,7 @@ ul.sidebar_list { padding-top: 2.4em; }
 
 /*---:[ layout colors ]:---*/
 body { color: #111111; background: #FFFFFF; }
-#page { background: #FFFFFF; }
+.full_width > .page { background: #FFFFFF; }
 a, h2 a:hover, #logo a:hover { color: #2361A1; }
 #logo, #logo a { color: #111111; }
 #tagline { color: #888888 }
