--- a/layout.css
+++ b/layout.css
@@ -18,27 +18,25 @@ the terms_of_service.txt file included in this package.
 ------------------------------------------------------------------------------*/
 
 /*---:[ core layout elements ]:---*/
-.full_width { width: 100%; clear: both; }
-	.full_width .page { width: 97.4em; margin: 0 auto; padding-right: 0em; padding-left: 0em; }
-	#header_area .page { padding-top: 0em; }
-	#footer_area .page { padding-bottom: 0em; }
+#container { width: 96.1em; margin: 0 auto; }
+	#page { padding: 0em; }
 		#header, #footer { padding-right: 1.2em; padding-left: 1.2em; }
 		#content_box { width: 100%; }
 		.no_sidebars { background: none !important; }
 			
-			#content { width: 51.6em; float: right; }
+			#content { width: 63.7em; float: left; }
 			.no_sidebars #content { width: 100%; }
-				.post_box, .teasers_box, .full_width #content_box .page { margin: 0 1.2em 0 2.4em; }
+				.post_box, .teasers_box, .full_width #content_box .page { margin: 0 2.5em 0 1.2em; }
 					.full_width #content_box .page { width: auto; }
 				.no_sidebars .post_box { margin: 0 1.2em; }
-				.teasers_box { width: 48em; }
-					.teaser { width: 22.8em; }
-				#archive_intro, .prev_next { padding-right: 1.2em; padding-left: 2.4em; }
-			#sidebars { width: 45.8em; border: 0; float: left; }
-				#sidebar_1 { width: 17.4em; border-style: dotted; border-width: 0 0em 0 0; float: left; clear: left; }
-				#sidebar_2 { width: 28.3em; float: left; }
+				.teasers_box { width: 60em; }
+					.teaser { width: 28.8em; }
+				#archive_intro, .prev_next { padding-right: 2.5em; padding-left: 1.2em; }
+			#sidebars { width: 32.4em; border: 0; float: right; }
+				.sidebar { width: 100%; }
+				#sidebar_1 { border: 0; }
 					.sidebar ul.sidebar_list { padding-right: 1.2em; padding-left: 1.2em; }
-					#sidebar_2 ul.sidebar_list { padding-right: 1.1em; }
+				
 		
 /*---:[ nav styles ]:---*/
 .menu ul, .menu ul li { width: 15em; }
@@ -50,20 +48,20 @@ the terms_of_service.txt file included in this package.
 /*---:[ multimedia box elements ]:---*/
 #multimedia_box { padding: 1.2em; }
 	#image_box img { display: block; padding: 0.1em; border-width: 0.1em; }
-	#image_box img.square { width: 43em; height: 43em; }
-	#image_box img.four_by_three { width: 43em; height: 32.3em; }
-	#image_box img.three_by_four { width: 43em; height: 57.3em; }
-	#image_box img.three_by_two { width: 43em; height: 28.7em; }
-	#image_box img.two_by_three { width: 43em; height: 64.5em; }
-	#image_box img.five_by_four { width: 43em; height: 34.4em; }
-	#image_box img.four_by_five { width: 43em; height: 53.8em; }
-	#image_box img.sixteen_by_nine { width: 43em; height: 24.2em; margin: 0 auto; }
-	#image_box img.nine_by_sixteen { width: 43em; height: 76.4em; margin: 0 auto; }
-	#image_box img.two_by_one { width: 43em; height: 21.5em; }
-	#image_box img.one_by_two { width: 43em; height: 86em; }
+	#image_box img.square { width: 29.6em; height: 29.6em; }
+	#image_box img.four_by_three { width: 29.6em; height: 22.2em; }
+	#image_box img.three_by_four { width: 29.6em; height: 39.5em; }
+	#image_box img.three_by_two { width: 29.6em; height: 19.7em; }
+	#image_box img.two_by_three { width: 29.6em; height: 44.4em; }
+	#image_box img.five_by_four { width: 29.6em; height: 23.7em; }
+	#image_box img.four_by_five { width: 29.6em; height: 37em; }
+	#image_box img.sixteen_by_nine { width: 29.6em; height: 16.7em; margin: 0 auto; }
+	#image_box img.nine_by_sixteen { width: 29.6em; height: 52.6em; margin: 0 auto; }
+	#image_box img.two_by_one { width: 29.6em; height: 14.8em; }
+	#image_box img.one_by_two { width: 29.6em; height: 59.2em; }
 
 /*---:[ comments area ]:---*/
-#comments { margin-right: 1.2em; margin-left: 1.2em; }
+#comments { margin-right: 2.5em; margin-left: 0em; }
 	.comments_intro, #respond_intro { margin-left: 1.2em; }
 		dl#comment_list dt, #trackback_list { padding-right: 1.2em; padding-left: 1.2em; }
 		dl#comment_list dd { padding-left: 1.2em; }
@@ -74,7 +72,7 @@ the terms_of_service.txt file included in this package.
 		dl#comment_list dl dd .format_text { padding-left: 1.5em; border-width: 0 0 0 0.063em; }
 		dl#comment_list dl dd.bypostauthor > .format_text { padding-left: 1.4em; border-width: 0 0 0 0.125em; }
 		dl#comment_list dl dd dl { padding-left: 2.4em; }
-#commentform { padding-right: 1.2em; padding-left: 1.2em; }
+#commentform { padding-right: 2.5em; padding-left: 1.2em; }
 .comments_closed, .login_alert { margin-left: 1.2em; }
 
 /*---:[ content elements ]:---*/
@@ -276,7 +274,7 @@ input, textarea { font-family: Georgia, "Times New Roman", Times, serif; }
 
 /*---:[ layout colors ]:---*/
 body { color: #111111; background: #FFFFFF; }
-.full_width > .page { background: #FFFFFF; }
+#page { background: #FFFFFF; }
 a, h2 a:hover, #logo a:hover { color: #2361A1; }
 #logo, #logo a { color: #111111; }
 #tagline { color: #888888 }
